# cs375-fa25-Final-Project

./: client.cpp  server
GroupChat/: CMakeLists.txt  README.md
GroupChat/Client/: chat_client  chat_client.cpp  chat_client.h  client  main  main.cpp
GroupChat/Server/: char_server  chat_server  chat_server.cpp  chat_server.h  group_manager.cpp  group_manager.h  perf_stats.cpp  perf_stats.h  server  server_main.cpp  simple_server.cpp  thread_pool.cpp  thread_pool.h  thread_pool_server.cpp
GroupChat/Server/logs/: performance.txt
GroupChat/Shared/: cache.h  protocol.h  utils.h
